<resources>
    <string name="app_name">晚阅</string>
    <string name="news_fragment">My News</string>
    <string name="life_fragment">My Life</string>
    <string name="ideal_fragment">My Ideal</string>
    <string name="title_news">新闻</string>
    <string name="title_life">生活</string>
    <string name="title_ideal">态度</string>
    <string name="default_title">这是一个默认标题</string>
    <string name="default_src">默认来源</string>
    <string name="default_date">2018-4-4 15:39:28</string>
    <string name="news_top">top</string>
    <string name="news_shehui">shehui</string>
    <string name="news_guonei">guonei</string>
    <string name="news_guoji">guoji</string>
    <string name="news_yule">yule</string>
    <string name="news_tiyu">tiyu</string>
    <string name="news_junshi">junshi</string>
    <string name="news_keji">keji</string>
    <string name="news_caijing">caijing</string>
    <string name="news_shishang">shishang</string>
    <string name="loading">努力加载中。。。</string>
    <string name="book">Book</string>
    <string name="video">Video</string>
    <string name="search_hint">请输入搜索内容</string>
    <string name="detail_author">作者：</string>
    <string name="detail_action">动作：</string>
    <string name="detail_read">在线阅读</string>
    <string name="detail_douban">阅读记录</string>
    <string name="detail_intro">内容简介：</string>
    <string name="detail_date">更新日期：</string>
    <string name="detail_title">默认标题</string>
    <string name="book_chapter">章节列表：</string>
    <string name="movie_title">一敲二腌三过油，轻松学会炒牛柳</string>
    <string name="movie_tag">标签</string>
    <string name="movie_category">2天前</string>
    <string name="news">News</string>
    <string name="news_label">My News</string>
    <string name="book_label">My Book</string>
    <string name="empty">暂时还没有内容哦</string>
    <string name="notes_add">添加</string>
    <string name="notes">Notes</string>
    <string name="note_dialog_title">命题or保存？</string>
    <string name="note_edit_hint">请输入你的文章标题</string>
    <string name="note_edit">编辑</string>
    <string name="note_delete">删除</string>
    <string name="note_share">分享</string>
    <string name="search">search</string>
    <string name="search_result">搜索结果</string>
</resources>
