<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/book_detail_img"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_margin="15dp"
            android:src="@drawable/nocover" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/book_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/detail_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/text_22_sp" />

            <LinearLayout
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_author"
                    android:textColor="@color/colorLightBlack" />

                <TextView
                    android:id="@+id/book_detail_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/default_src"
                    android:textColor="@color/colorWheat" />
            </LinearLayout>

            <LinearLayout
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_date"
                    android:textColor="@color/colorLightBlack" />

                <TextView
                    android:id="@+id/book_detail_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_date"
                    android:textColor="@color/colorLightDarkBlue"
                    android:textSize="12sp" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/detail_action"
                android:textColor="@color/colorLightBlack" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_read_book"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/colorLightPink"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/detail_read"
                    android:textColor="#333366" />

                <Button
                    android:id="@+id/btn_book_history"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/colorWheat"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/detail_douban"
                    android:textColor="#333366" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_intro"
                android:textColor="@color/colorLightBlack" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/cv_bg"
                app:cardCornerRadius="5dp"
                app:cardElevation="3dp">

                <TextView
                    android:id="@+id/book_detail_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/default_src"
                    android:textColor="@color/colorLightBlack"
                    android:textSize="16sp" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>