<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="3dp"
    app:cardBackgroundColor="@color/cv_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/item_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            android:src="@drawable/life_bg"
            android:scaleType="fitXY"/>
        <TextView
            android:id="@+id/item_title"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_title"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="20sp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/item_book_author"
                android:layout_margin="15dp"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/default_src"
                android:textColor="@color/colorLightBlack"/>
            <TextView
                android:id="@+id/item_book_summary"
                android:textSize="10sp"
                android:text="@string/default_date"
                android:textColor="@color/colorLightBlack"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>