<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    app:cardBackgroundColor="@color/cv_bg"
    app:cardCornerRadius="6dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/default_title"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_book_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="8dp"
                android:text="@string/default_src"
                android:textColor="@color/colorLightBlack"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/item_book_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="15dp"
                android:text="@string/default_date"
                android:textColor="@color/colorLightBlack"
                android:textSize="10sp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/item_img"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_loading" />
    </LinearLayout>
</android.support.v7.widget.CardView>