<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    app:cardBackgroundColor="@color/cv_bg"
    app:cardCornerRadius="6dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_book_image_large"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/nocover" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/default_title"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_book_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:lines="1"
                android:text="@string/default_src"
                android:textColor="@color/colorBrulyWood"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/item_book_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ellipsize="end"
                android:text="@string/default_date"
                android:textColor="@color/colorLightBlack"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>