<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    app:cardBackgroundColor="@color/cv_bg"
    app:cardCornerRadius="6dp"
    app:cardElevation="3dp"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_movie_cover"
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_loading" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="12dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/movie_title"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_movie_avatar"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:layout_below="@id/tv_movie_title"
                android:src="@mipmap/ic_launcher_new_round"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp" />
            <TextView
                android:id="@+id/tv_movie_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_movie_avatar"
                android:layout_below="@id/tv_movie_title"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:text="@string/movie_tag"
                android:textColor="@color/colorLightBlack"
                android:textSize="10sp"
                android:layout_toEndOf="@id/iv_movie_avatar"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/tv_movie_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_movie_avatar"
                android:maxLines="1"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:text="@string/movie_category"
                android:textColor="@color/colorLightBlack"
                android:textSize="10sp"
                android:layout_marginStart="15dp" />
        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>