<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_movie_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/life_bg"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="4dp">

            <ImageView
                android:id="@+id/iv_movie_avatar"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/ic_launcher_new_round"
                tools:ignore="ContentDescription,RtlHardcoded" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"
                android:layout_toRightOf="@id/iv_movie_avatar"
                android:orientation="vertical"
                tools:ignore="RelativeOverlap,RtlHardcoded">

                <TextView
                    android:id="@+id/tv_movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/movie_title"
                    android:textColor="#000"
                    android:textSize="15sp"
                    tools:ignore="Deprecated,HardcodedText" />

                <TextView
                    android:id="@+id/tv_movie_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:text="@string/movie_tag"
                    android:textColor="@color/colorLightBlack"
                    tools:ignore="SmallSp" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_movie_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:text="@string/movie_category"
                android:textColor="@color/colorLightDarkBlue"
                android:textSize="12sp"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@android:color/darker_gray"
                tools:ignore="RtlHardcoded" />
        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
